[gd_scene load_steps=11 format=3 uid="uid://yh8ed3ifnghb"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_jyict"]
[ext_resource type="PackedScene" uid="uid://117y4nub8dvd" path="res://scenes/character.tscn" id="2_boxkp"]
[ext_resource type="Script" path="res://scenes/World.gd" id="2_kkpfb"]
[ext_resource type="PackedScene" uid="uid://ewayixdstaj6" path="res://scenes/platforms/platform.tscn" id="4_2xq3v"]
[ext_resource type="Script" path="res://scenes/CharacterCamera.gd" id="5_3da65"]
[ext_resource type="Theme" uid="uid://df8f7hoga7trb" path="res://styles/theme.tres" id="6_75mj2"]

[sub_resource type="Animation" id="Animation_j4tba"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 2340)]
}

[sub_resource type="Animation" id="Animation_7mg2e"]
resource_name = "pause"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(3, 3),
"update": 0,
"values": [Vector2(0, 2340), Vector2(0, 2040)]
}

[sub_resource type="Animation" id="Animation_0ovcu"]
resource_name = "resume"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(3, 3),
"update": 0,
"values": [Vector2(0, 2040), Vector2(0, 2340)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eaxjl"]
_data = {
"RESET": SubResource("Animation_j4tba"),
"pause": SubResource("Animation_7mg2e"),
"resume": SubResource("Animation_0ovcu")
}

[node name="Game" type="Node"]
script = ExtResource("1_jyict")

[node name="World" type="Node2D" parent="."]
script = ExtResource("2_kkpfb")

[node name="Character" parent="World" instance=ExtResource("2_boxkp")]
position = Vector2(4, -168)

[node name="Platform" parent="World" instance=ExtResource("4_2xq3v")]

[node name="CharacterCamera" type="Camera2D" parent="World"]
offset = Vector2(0, -250)
current = true
position_smoothing_enabled = true
script = ExtResource("5_3da65")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_75mj2")
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="SceneLabel" type="Label" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 150
text = "Game"

[node name="ScoreLabel" type="Label" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 150
text = "Score"

[node name="PauseButton" type="Button" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_font_sizes/font_size = 100
text = "Pause
"

[node name="Pause" type="MarginContainer" parent="CanvasLayer"]
process_mode = 3
offset_top = 2340.0
offset_right = 1080.0
offset_bottom = 2640.0
theme = ExtResource("6_75mj2")

[node name="PauseAnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Pause"]
libraries = {
"": SubResource("AnimationLibrary_eaxjl")
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Pause"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 8
color = Color(0.0941176, 0.0941176, 0.0941176, 1)

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Pause"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="ScoreLabel" type="Label" parent="CanvasLayer/Pause/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 100
text = "Score"
clip_text = true

[node name="ResumeButton" type="Button" parent="CanvasLayer/Pause/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_font_sizes/font_size = 100
text = "Resume
"
icon_alignment = 2

[node name="GameAnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="pressed" from="CanvasLayer/MarginContainer/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="animation_finished" from="CanvasLayer/Pause/PauseAnimationPlayer" to="." method="_on_pause_animation_player_animation_finished"]
[connection signal="pressed" from="CanvasLayer/Pause/MarginContainer2/ResumeButton" to="." method="_on_resume_button_pressed"]
